--- a/html/productView.html
+++ b/html/productView.html
@@ -8,8 +8,11 @@
     <title>Injay Fitness Shop</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link href="https://fonts.googleapis.com/css2?family=Island+Moments&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Work+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/productView.css">
     <link rel="stylesheet" href="css/productstyle.css">
@@ -52,7 +55,78 @@
         </div>
         </form>
     </div>
-    <section id="header">
+    <!-- navbar -->
+    <div>
+        <div class="nav-container">
+            <p class="nav-logo">INJAY FITNESS<span class="material-symbols-outlined dumble">
+                    fitness_center
+                </span></p>
+            <div class="navlink-container">
+                <a class="nav-link">Home</a>
+                <a class="nav-link">About</a>
+                <a class="nav-link">contact</a>
+                <a class="nav-link">Blog</a>
+                <span class="material-symbols-outlined cart-logo">
+                    shopping_bag
+                </span>
+            </div>
+        </div>
+    </div>
+
+    <!-- product section -->
+    <div class="product-container">
+        <div class="hero1">
+            <div id="productContent" class="product-content">
+                <div class="discription-container">
+                    <div class="product-name">
+                        Dumbell
+                    </div>
+                    <p class="product-desc">
+                        The sizes 1kg to 30kg of the Primal Strength Rubber Hex Dumbbells are offered in pairs. The
+                        dumbbells have a lovely design that makes them both attractive in your gym and pleasant to use.
+                        To ensure optimal comfort, they have an easy-grip, ergonomic handle made of hardened chrome
+                    </p>
+                </div>
+                <div class="product-price">
+                    €65
+                </div>
+                <div class="cart-container">
+                    <form class="commerce-add-to-cart-form">
+                        <div class="quantity-label">
+                            quantity
+                        </div>
+                        <input class="cart-field" value="1"/>
+                        <input class="cart-button" value="Add cart">
+                    </form>
+                </div>
+            </div>
+            <div id="mainImage" class="main-img">
+            </div>
+            <div id="item-list-container" class="item-list-container">
+                <div class="image-list">
+                    <a class="image-cover">                  
+                    </a> 
+                    <div class="list-img" style="background-image:url(images/Equipment_Images/Dumbell/H_D.jpg);">                   
+                    </div>
+                </div>
+                <div class="image-list">
+                    <div class="list-img" style="background-image:url(images/Equipment_Images/Dumbell/f2.1_D.jpg);">          
+                        <a class="image-cover">
+                        </a>              
+                    </div>
+                </div>
+                <div class="image-list">
+                    <div class="list-img" style="background-image:url(images/Equipment_Images/Dumbell/f3.3_D.jpg);">   
+                        <a class="image-cover">
+                        </a>                     
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </div>
+
+    <!-- <section id="header">
         <h4 class="logo">Injay Fitness Shop</h4>
         <div>
             <ul id="navbar">
@@ -76,7 +150,7 @@
         <div id="single-pro-details" class="single-pro-details">
 
         </div>
-    </section>
+    </section> -->
     <footer class="pro-footer">
         <div class="pro-container">
             <div class="pro-row">
